--- a/index.css
+++ b/index.css
@@ -1,5 +1,52 @@
-.title {
-    text-align: center;
+body {
+    font-family: Arial,sans-serif;
+    color: #333;
+    margin: 0px;
+    padding: 0px;
+}
+
+header{
+    color: #ffffff;
+    background-color: #a9a7a8;
+    border-color: #e7e7e7;
+    border: 1px solid transparent;
+    margin: 0px;
+    margin-bottom: 20px;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+}
+
+h1 {
+    margin: 0px;
+}
+
+header h1 {
+    font-weight: normal;
+}
+
+h3 {
+    margin: 0px;
+    font-weight: normal;
+}
+
+img {
+    width: 100px;
+    height: 100px;
+    padding: 10px;
+}
+
+button {
+    font-size: 18px;
+    font-family: Arial,sans-serif;
+    border-radius: 25px;
+    border: 2px solid;
+    width: 100px;
+    height: 50px;
+}
+
+.header-text {
+    margin-left: 10px;
 }
 
 .level-container {
@@ -14,11 +61,15 @@
 }
 
 .scale {
+    margin-top: 100px;
+    margin-bottom: 10px;
+    font-size: 48px;
     text-align: center;
 }
 
 .fingering {
     text-align: center;
+    margin-bottom: 100px;
 }
 
 .next-reset-container {
@@ -31,10 +82,24 @@
     text-align: center;
 }
 
-.footer {
+.vertical-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+footer {
+    color: #ffffff;
+    background-color: #a9a7a8;
+    border-color: #e7e7e7;
     position:fixed;
     bottom:0;
     left:0;
-    width:100%;
-    margin: 5px
-  }
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+}
+
+footer span {
+    padding: 5px;
+}
