--- a/index.css
+++ b/index.css
@@ -1,3 +1,7 @@
+* {
+    margin: 0
+}
+
 html {
     height: 100%;
 }
@@ -5,40 +9,21 @@ html {
 body {
     font-family: Arial,sans-serif;
     color: #333;
-    margin: 0px;
-    padding: 0px;
     height: 100%;
-}
-
-.box {
-    display: flex;
-    height: 100%;
-    flex-flow: column;
 }
 
 header {
     color: #ffffff;
     background-color: #a9a7a8;
     border-color: #e7e7e7;
-    border: 1px solid transparent;
-    margin: 0px;
-    margin-bottom: 20px;
+    margin-bottom: 24px;
     display: flex;
     justify-content: flex-start;
     align-items: center;
     flex: 0 1 auto;
 }
 
-h1 {
-    margin: 0px;
-}
-
-header h1 {
-    font-weight: normal;
-}
-
 h3 {
-    margin: 0px;
     font-weight: normal;
 }
 
@@ -49,7 +34,7 @@ p {
 img {
     width: 100px;
     height: 100px;
-    padding: 10px;
+    padding: 8px;
 }
 
 button {
@@ -60,6 +45,78 @@ button {
     width: 100px;
     height: 50px;
     background-color: white;
+}
+
+footer {
+    color: #ffffff;
+    background-color: #a9a7a8;
+    border-color: #e7e7e7;
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+    flex: 0 1 auto;
+    flex-wrap: wrap;
+}
+
+footer p {
+    font-size: 16px;
+    margin: 5px;
+}
+
+.main-container {
+    display: flex;
+    height: 100%;
+    flex-flow: column;
+}
+
+.vertical-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    flex: 1 1 auto
+}
+
+.level-container {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    gap: 8px
+}
+
+.level-container div {
+    display: flex;
+    gap: 8px
+}
+
+.next-reset-container {
+    display: flex;
+    justify-content: center;
+    gap: 16px;
+    margin-bottom: 8px;
+}
+
+.header-text {
+    margin-left: 10px;
+}
+
+.header-title {
+    font-weight: normal;
+}
+
+.scale {
+    font-size: 48px;
+    text-align: center;
+    margin: 0;
+    margin-bottom: 8px;
+}
+
+.fingering {
+    text-align: center;
+}
+
+.progress-text {
+    text-align: center;
+    margin-bottom: 24px;
 }
 
 #level1 {
@@ -142,65 +199,4 @@ button {
     background-color: #352125;
 }
 
-.header-text {
-    margin-left: 10px;
-}
 
-.level-container {
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
-    gap: 8px
-}
-
-.level-container div {
-    display: flex;
-    gap: 8px
-}
-
-.level-button-selected {
-    background-color: black;
-    color: white;
-}
-
-.scale {
-    font-size: 48px;
-    text-align: center;
-    margin: 0;
-    margin-bottom: 10px;
-}
-
-.fingering {
-    text-align: center;
-}
-
-.next-reset-container {
-    display: flex;
-    justify-content: center;
-    gap: 10px;
-}
-
-.progress-text {
-    text-align: center;
-}
-
-.vertical-container {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    flex: 1 1 auto
-}
-
-footer {
-    color: #ffffff;
-    background-color: #a9a7a8;
-    border-color: #e7e7e7;
-    display: flex;
-    justify-content: space-between;
-    width: 100%;
-    flex: 0 1 auto
-}
-
-footer span {
-    padding: 5px;
-}
