--- a/index.css
+++ b/index.css
@@ -23,10 +23,6 @@ header {
     flex: 0 1 auto;
 }
 
-h3 {
-    font-weight: normal;
-}
-
 p {
     font-size: 18px;
 }
@@ -40,11 +36,21 @@ img {
 button {
     font-size: 18px;
     font-family: Arial,sans-serif;
-    border-radius: 25px;
+    border-radius: 20px;
     border: 2px solid;
+    width: 80px;
+    height: 40px;
+    background-color: white;
+    color: black;
+    border-color: black;
+}
+
+@media screen and (min-width: 450px) {
+button {
+    border-radius: 25px;
     width: 100px;
     height: 50px;
-    background-color: white;
+}
 }
 
 footer {
@@ -103,11 +109,28 @@ footer p {
     font-weight: normal;
 }
 
+.header-subtitle {
+    font-weight: normal;
+    display: none;
+}
+
+@media screen and (min-width: 450px) {
+.header-subtitle {
+    display: block;
+}
+}
+
 .scale {
-    font-size: 48px;
+    font-size: 40px;
     text-align: center;
     margin: 0;
     margin-bottom: 8px;
+}
+
+@media screen and (min-width: 450px) {
+.scale {
+    font-size: 48px;
+}
 }
 
 .fingering {
@@ -117,6 +140,16 @@ footer p {
 .progress-text {
     text-align: center;
     margin-bottom: 24px;
+}
+
+.github {
+    display: none;
+}
+
+@media screen and (min-width: 450px) {
+.github {
+    display: block;
+}
 }
 
 #level1 {
