--- a/index.css
+++ b/index.css
@@ -7,15 +7,15 @@ html {
 }
 
 body {
-    font-family: Arial,sans-serif;
-    color: #333;
+    font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
+    color: #444;
     height: 100%;
 }
 
 header {
-    color: #ffffff;
-    background-color: #a9a7a8;
-    border-color: #e7e7e7;
+    color: #333;
+    background-color: #f8f8f8;
+    border-bottom: 1px #e7e7e7 solid;
     margin-bottom: 24px;
     display: flex;
     justify-content: flex-start;
@@ -31,6 +31,7 @@ img {
     width: 100px;
     height: 100px;
     padding: 8px;
+    padding-left: 16px;
 }
 
 button {
@@ -55,9 +56,9 @@ button {
 }
 
 footer {
-    color: #ffffff;
-    background-color: #a9a7a8;
-    border-color: #e7e7e7;
+    color: #333;
+    background-color: #f8f8f8;
+    border-top: 1px #e7e7e7 solid;
     display: flex;
     justify-content: space-between;
     width: 100%;
@@ -67,7 +68,7 @@ footer {
 
 footer p {
     font-size: 16px;
-    margin: 5px;
+    margin: 8px;
 }
 
 .main-container {
